force-app/main/default/objects/Contact_Assignments__mdt/Contact_Assignments__mdt.object-meta.xml
<CustomObject>
    <label>Contact Assignment</label>
    <pluralLabel>Contact Assignments</pluralLabel>
</CustomObject>