force-app/main/default/objects/Contact_Assignments__mdt/fields/Assignee_Name__c.field-meta.xml
<CustomField>
    <fullName>Assignee_Name__c</fullName>
    <label>Assignee Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>