force-app/main/default/objects/Contact_Assignments__mdt/fields/Assignee_Number__c.field-meta.xml
<CustomField>
    <fullName>Assignee_Number__c</fullName>
    <label>Assignee Number</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>