force-app/main/default/objects/Contact_Assignments__mdt/fields/Assignee_User_Id__c.field-meta.xml
<CustomField>
    <fullName>Assignee_User_Id__c</fullName>
    <description>Must use the 18-character User Id</description>
    <inlineHelpText>Must use the 18-character User Id</inlineHelpText>
    <label>Assignee User Id</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>