force-app/main/default/objects/Contact_Assignments__mdt/fields/Assignment_Group__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Group__c</fullName>
    <label>Assignment Group</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
                <default>true</default>
                <label>A</label>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>